@@ -6,10 +6,11 @@ all:\
 	t_alloc t_array t_base_name t_bin t_buffer t_dir_array t_dir_hash \
 	t_dir_name t_dstring t_env t_fd t_float t_fmt t_fmt2 t_fmt3 \
 	t_fmt_spec t_get_opt t_hashtable1 t_hashtable2 t_hashtable3 \
-	t_hashtable4 t_hashtable5 t_hashtable6 t_iarray1 t_iarray2 t_iarray3 \
-	t_iarray4 t_iarray5 t_iarray6 t_int t_open t_sarray1 t_scan t_scan2 \
-	t_scan3 t_scan_float t_scan_fspec t_scan_spec t_seek t_sgetline \
-	t_sig t_squeue1 t_sstack1 t_sstring t_stalloc t_str t_uint 
+	t_hashtable4 t_hashtable5 t_hashtable6 t_hashtable7 t_iarray1 \
+	t_iarray2 t_iarray3 t_iarray4 t_iarray5 t_iarray6 t_int t_open \
+	t_sarray1 t_scan t_scan2 t_scan3 t_scan_float t_scan_fspec \
+	t_scan_spec t_seek t_sgetline t_sig t_squeue1 t_sstack1 t_sstring \
+	t_stalloc t_str t_uint 
 
 cc: ../cc conf-cctype conf-cc
 	rm -f cc
@@ -195,6 +196,14 @@ t_hashtable6:\
 t_hashtable6.o:\
 	cc t_hashtable6.c t_hashtable.h ../alloc.h ../hashtable.h 
 	./cc t_hashtable6.c
+t_hashtable7:\
+	ld t_hashtable7.ld t_hashtable7.o ../hashtable.a ../error.a \
+	../bin.a ../str.a ../alloc.a 
+	./ld t_hashtable7 t_hashtable7.o ../hashtable.a ../error.a ../bin.a \
+	../str.a ../alloc.a 
+t_hashtable7.o:\
+	cc t_hashtable7.c t_hashtable.h ../hashtable.h 
+	./cc t_hashtable7.c
 t_hashtable_c.o:\
 	cc t_hashtable_c.c t_hashtable.h ../hashtable.h ../bin.h ../str.h 
 	./cc t_hashtable_c.c
@@ -374,17 +383,17 @@ clean: tests_clean
 	t_fmt3.o t_fmt_spec t_fmt_spec.o t_get_opt t_get_opt.o t_hashtable1 \
 	t_hashtable1.o t_hashtable2 t_hashtable2.o t_hashtable3 \
 	t_hashtable3.o t_hashtable4 t_hashtable4.o t_hashtable5 \
-	t_hashtable5.o t_hashtable6 t_hashtable6.o t_hashtable_c.o \
-	t_hashtable_d.o t_iarray.o t_iarray1 t_iarray1.o t_iarray2 \
-	t_iarray2.o t_iarray3 t_iarray3.o t_iarray4 t_iarray4.o t_iarray5 \
-	t_iarray5.o 
-	rm -f t_iarray6 t_iarray6.o t_iarray_util.o t_int t_int.o t_open \
-	t_open.o t_sarray1 t_sarray1.o t_scan t_scan.o t_scan2 t_scan2.o \
-	t_scan3 t_scan3.o t_scan_float t_scan_float.o t_scan_fspec \
-	t_scan_fspec.o t_scan_spec t_scan_spec.o t_seek t_seek.o t_sgetline \
-	t_sgetline.o t_sig t_sig.o t_squeue1 t_squeue1.o t_sstack1 \
-	t_sstack1.o t_sstring t_sstring.o t_stalloc t_stalloc.o t_str \
-	t_str.o t_uint t_uint.o 
+	t_hashtable5.o t_hashtable6 t_hashtable6.o t_hashtable7 \
+	t_hashtable7.o t_hashtable_c.o t_hashtable_d.o t_iarray.o t_iarray1 \
+	t_iarray1.o t_iarray2 t_iarray2.o t_iarray3 t_iarray3.o t_iarray4 \
+	t_iarray4.o 
+	rm -f t_iarray5 t_iarray5.o t_iarray6 t_iarray6.o t_iarray_util.o \
+	t_int t_int.o t_open t_open.o t_sarray1 t_sarray1.o t_scan t_scan.o \
+	t_scan2 t_scan2.o t_scan3 t_scan3.o t_scan_float t_scan_float.o \
+	t_scan_fspec t_scan_fspec.o t_scan_spec t_scan_spec.o t_seek \
+	t_seek.o t_sgetline t_sgetline.o t_sig t_sig.o t_squeue1 t_squeue1.o \
+	t_sstack1 t_sstack1.o t_sstring t_sstring.o t_stalloc t_stalloc.o \
+	t_str t_str.o t_uint t_uint.o 
 
 tests: list_tests run_tests
 tests_clean:
