@@ -1,0 +1,6 @@
+t_hashtable7.o
+../hashtable.a
+../error.a
+../bin.a
+../str.a
+../alloc.a
