@@ -1,3 +1,3 @@
--O
+-g
 
 These are passed to the C compiler.
