@@ -7,6 +7,7 @@ int ht_getb(const struct hashtable *h, const void *k, unsigned long klen,
   struct ht_table_head *th;
   struct ht_table_node *np;
   unsigned long pos;
+  unsigned long len;
   const char *key = (const char *) k;
 
   pos = ht_hash(key, klen) & (HT_HASH_BUCKETS - 1);
@@ -17,7 +18,11 @@ int ht_getb(const struct hashtable *h, const void *k, unsigned long klen,
 
   for (;;) {
     if (np->state == HT_SLOT_USED)
-      if (bin_same(np->key, key, klen)) {
+      if (klen >= np->keylen)
+        len = klen;
+      else
+        len = np->keylen;
+      if (bin_same(np->key, key, len)) {
         *dat = np->data;
         *dlen = np->datalen;
         return 1;
